# near-mpc

./: .gitignore
chain-signatures/: Cargo.toml
chain-signatures/contract/src/: lib.rs  primitives.rs
chain-signatures/contract/tests/: common.rs  user_views.rs
chain-signatures/res/: mock_mpc_contract.wasm
chain-signatures/test-node/: Cargo.toml
chain-signatures/test-node/src/: cli.rs  ecdsa.rs  lib.rs  main.rs  rpc_client.rs  worker.rs
chain-signatures/test-node/tests/: basic.rs  common.rs
