[package]
name = "mpc-test-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.0"
near-sdk = { version = "5.2.1", features = ["legacy", "unit-testing"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
k256 = { version = "0.13.1", features = ["sha256", "ecdsa", "serde", "arithmetic", "expose-field"] }
crypto-shared = { path = "../crypto-shared" }

thiserror = "1"
clap = { version = "4.2", features = ["derive", "env"] }
http = "1.1.0"

anyhow = "1"
rand = "0.8"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-stackdriver = "0.10.0"

# crypto dependencies
ecdsa = { version = "0.16.9", features = ["digest", "hazmat"] }
signature = "2.2.0"
digest = "0.10.7"
hex = "0.4.3"

# near dependencies
near-crypto = "0.23.0"
near-fetch = "0.5.1"
near-account-id = "1.0.0"
near-gas = { version = "0.2.5", features = ["serde", "borsh", "schemars"] }

mpc-contract = { path = "../contract" }

[dev-dependencies]
near-workspaces = { git = "https://github.com/near/near-workspaces-rs", branch = "node/1.40" }
